UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_SAP_Customer_Staging__c.object
<CustomObject>
    <description>This will be used for SAP to send the Request and to update record in salesforce Internally.</description>
    <fields>
        <fullName>Phoenix_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Key__c</fullName>
        <formula>Phoenix_Parent_SAP_Customer_Code__c+&quot;_&quot;+Phoenix_SAP_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Effective_To__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Grouping__c</fullName>
        <label>Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Name4__c</fullName>
        <label>Name4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent_SAP_Customer_Code__c</fullName>
        <label>Parent SAP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent_SAP_Customer__c</fullName>
        <label>Parent SAP Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Part_of_Hierarchy__c</fullName>
        <label>Part of Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Partner_Function__c</fullName>
        <label>Partner Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_RequestJSONFromSAP__c</fullName>
        <label>RequestJSONFromSAP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Created_Date__c</fullName>
        <label>SAP Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Customer_Code__c</fullName>
        <label>SAP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Customer_Group__c</fullName>
        <label>SAP Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Customer_Name_2__c</fullName>
        <label>SAP Customer Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Customer_Name__c</fullName>
        <label>SAP Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Modified_Date__c</fullName>
        <label>SAP Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_SF_Customer_Name__c</fullName>
        <label>SF Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Source_Type__c</fullName>
        <description>This is used to identify where the staging record is created. either from SAP or from Salesforce. by default is set to SAP.</description>
        <inlineHelpText>Generated Source</inlineHelpText>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                    <default>true</default>
                    <label>SAP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Valid_from__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Valid_to__c</fullName>
        <label>Valid to</label>
        <type>Date</type>
    </fields>
    <label>SAP Customer Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_SAP_Customer_Name__c</columns>
        <columns>Phoenix_SAP_Customer_Code__c</columns>
        <columns>Phoenix_SAP_Customer_Group__c</columns>
        <columns>Phoenix_Status__c</columns>
        <columns>Phoenix_Sales_Organization__c</columns>
        <columns>Phoenix_Distribution_Channel__c</columns>
        <columns>Phoenix_Division__c</columns>
        <columns>Phoenix_Source_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>SAP Customer Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Customers Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>